--- a/docs/config.json
+++ b/docs/config.json
@@ -1470,6 +1470,136 @@
       "source": "/enroll-resources/mcp-access/troubleshooting/",
       "destination": "/zero-trust-access/enroll-resources/mcp-access/troubleshooting/",
       "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-azure-databases/azure-postgres-mysql/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-azure-databases/azure-postgres-mysql/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-azure-databases/azure-redis/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-azure-databases/azure-redis/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-azure-databases/azure-sql-server-ad/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-azure-databases/azure-sql-server-ad/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-azure-databases/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-azure-databases/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-google-cloud-databases/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-google-cloud-databases/mysql-cloudsql/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/mysql-cloudsql/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-google-cloud-databases/postgres-cloudsql/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/postgres-cloudsql/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-google-cloud-databases/spanner/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/spanner/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-managed-databases/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-managed-databases/mongodb-atlas/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/mongodb-atlas/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-managed-databases/oracle-exadata/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/oracle-exadata/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-managed-databases/snowflake/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/snowflake/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/cassandra-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/cassandra-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/clickhouse-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/clickhouse-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/cockroachdb-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/cockroachdb-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/elastic/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/elastic/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/mongodb-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mongodb-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/oracle-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/oracle-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/redis-cluster/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis-cluster/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/redis/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/sql-server-ad-pkinit/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/sql-server-ad-pkinit/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/enroll-self-hosted-databases/vitess/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/vitess/",
+      "permanent": true
+    },
+    {
+      "source": "/enroll-resources/database-access/getting-started/",
+      "destination": "/zero-trust-access/enroll-resources/database-access/getting-started/",
+      "permanent": true
     }
   ]
 }
