--- a/docs/config.json
+++ b/docs/config.json
@@ -1131,6 +1131,16 @@
       "permanent": true
     },
     {
+      "source": "/admin-guides/access-controls/idps/",
+      "destination": "/identity-governance/idps/",
+      "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/saml-attribute-mapping/",
+      "destination": "/zero-trust-access/access-controls/idps/saml-attribute-mapping/",
+      "permanent": true
+    },
+    {
       "source": "/admin-guides/access-controls/idps/saml-gcp-workforce-identity-federation/",
       "destination": "/identity-governance/idps/saml-gcp-workforce-identity-federation/",
       "permanent": true
