--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,9 @@ onlyBuiltDependencies:
   - node-pty
   - protobufjs
   - unrs-resolver
+ignoredBuiltDependencies:
+  # Imported by jsdom-testing-mocks but not needed by us.
+  - puppeteer
 # Without this, electron-builder will pull in electron-builder-squirrel-windows (which we don't need)
 # and that dep will in turn pull electron-winstaller (which we also don't need). pnpm will then
 # start complaining that electron-winstaller is not in onlyBuiltDependencies.
