--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -65,6 +65,7 @@ jobs:
       - name: Configure Rust Toolchain
         run: |
           rustup override set ${{ env.RUST_VERSION }}
+          rustup target add wasm32-unknown-unknown
 
       - name: Build
         run: make binaries
