Update autogenerated docs

--- a/examples/chart/teleport-cluster/charts/teleport-operator/operator-crds/resources.teleport.dev_provisiontokens.yaml
+++ b/examples/chart/teleport-cluster/charts/teleport-operator/operator-crds/resources.teleport.dev_provisiontokens.yaml
@@ -402,6 +402,8 @@ spec:
                     description: OIDCConfig configures the `oidc` type.
                     nullable: true
                     properties:
+                      insecure_allow_http_issuer:
+                        type: boolean
                       issuer:
                         type: string
                     type: object
