CTMU documentation update (multi-cluster and multi-version caching support) (#57325)
* Update client tools managed updates documentation to add information about multi-cluster and multi-version caching support

* Rename to managed updates

* Add info about using custom CDN and managed updates initiation
Add redirect

* Apply suggestions from code review

Co-authored-by: Paul Gottschling <paul.gottschling@goteleport.com>

* Apply suggestions from code review

Co-authored-by: Stephen Levine <stephen.levine@goteleport.com>

* Corrected action order

* Apply suggestions from code review

Co-authored-by: Hugo Shaka <hugo.hervieux@goteleport.com>

* Reorder configuration section

---------

Co-authored-by: Paul Gottschling <paul.gottschling@goteleport.com>
Co-authored-by: Stephen Levine <stephen.levine@goteleport.com>
Co-authored-by: Hugo Shaka <hugo.hervieux@goteleport.com>

--- a/docs/config.json
+++ b/docs/config.json
@@ -1359,6 +1359,11 @@
       "source": "/admin-guides/management/security/selinux/",
       "destination": "/zero-trust-access/management/security/selinux/",
       "permanent": true
+    },
+    {
+      "source": "/upgrading/client-tools-autoupdate/",
+      "destination": "/upgrading/client-tools-managed-updates/",
+      "permanent": true
     }
   ]
 }
